Add new members on membership page

--- a/data/en/organizational_members.yml
+++ b/data/en/organizational_members.yml
@@ -11,6 +11,12 @@ members:
     - name: "Oracle Labs"
       logo: "images/members/oracle-labs.jpg"
       link: "https://www.oracle.com/"
+    - name: "Pometry"
+      logo: "images/members/pometry.png"
+      link: "https://www.pometry.com/"
+    - name: "TigerGraph"
+      logo: "images/members/tigergraph.png"
+      link: "https://www.tigergraph.com"
   companies_title: "Companies (in alphabetical order):"
   # The template automatically does the alphabetical ordering based on the name of the company
   companies:
@@ -41,12 +47,15 @@ members:
     - name: "Ontotext"
       logo: "images/members/ontotext.jpg"
       link: "https://www.ontotext.com/"
+    - name: "Redis Labs"
+      logo: "images/members/redis-labs.png"
+      link: "https://redislabs.com/"
     - name: "Sparsity"
       logo: "images/members/sparsity.png"
       link: "http://www.sparsity-technologies.com/"
-    - name: "TigerGraph"
-      logo: "images/members/tigergraph.png"
-      link: "https://www.tigergraph.com"
+    - name: "Ultipa"
+      logo: "images/members/ultipa.png"
+      link: "http://www.ultipa.com/"
   nonprofits_title: "Non-Profit Organizations:"
   nonprofits:
     - name: "Birkbeck, University of London"
