Enforce https on company website links

--- a/data/en/organizational_members.yml
+++ b/data/en/organizational_members.yml
@@ -31,10 +31,10 @@ members:
       link: "https://chuanglintech.com/"
     - name: "Intel"
       logo: "images/members/intel.png"
-      link: "http://www.intel.com/"
+      link: "https://www.intel.com/"
     - name: "JCC Consulting Inc."
       logo: "images/members/jcc.png"
-      link: "www.jcc.com"
+      link: "https://www.jcc.com"
     - name: "Katana graph"
       logo: "images/members/katana-graph.jpg"
       link: "https://katanagraph.com/"
@@ -55,10 +55,10 @@ members:
       link: "https://redislabs.com/"
     - name: "Sparsity"
       logo: "images/members/sparsity.png"
-      link: "http://www.sparsity-technologies.com/"
+      link: "https://www.sparsity-technologies.com/"
     - name: "Ultipa"
       logo: "images/members/ultipa.png"
-      link: "http://www.ultipa.com/"
+      link: "https://www.ultipa.com/"
   nonprofits_title: "Non-Profit Organizations:"
   nonprofits:
     - name: "Birkbeck, University of London"
