--- a/data/en/organizational_members.yml
+++ b/data/en/organizational_members.yml
@@ -34,7 +34,7 @@ members:
       link: "https://www.intel.com/"
     - name: "JCC Consulting Inc."
       logo: "images/members/jcc.png"
-      link: "https://www.jcc.com"
+      link: "http://www.jcc.com"
     - name: "Katana graph"
       logo: "images/members/katana-graph.jpg"
       link: "https://katanagraph.com/"
