--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build bib
         run: |
-          pip3 install -U academic
+          pip3 install -U academic==0.7.0
           find ./bibs/ -iname "*bib" -exec ~/.local/bin/academic import --overwrite --publication-dir=english/publication --verbose --bibtex {} \;
 
       - name: Build
