Add new member: Stargraph

--- a/data/en/organizational_members.yml
+++ b/data/en/organizational_members.yml
@@ -56,6 +56,9 @@ members:
     - name: "Sparsity"
       logo: "images/members/sparsity.png"
       link: "https://www.sparsity-technologies.com/"
+    - name: "Stargraph"
+      logo: "images/members/stargraph.png"
+      link: "https://www.stargraph.cn/"
     - name: "Ultipa"
       logo: "images/members/ultipa.png"
       link: "https://www.ultipa.com/"
